[package]
name = "nasa_image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
chrono = "0.4.22"
dotenv = "0.15.0"
image = "0.24.3"
openssl = { version = "0.10.41", features = ["vendored"] }
reqwest = { version = "0.11.11", features = ["json"] }
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["full"] }

